refactor: added many custom dtos for rest