@@ -2,7 +2,6 @@ package ru.dankoy.hw19.core.controller;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -13,8 +12,8 @@ import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import ru.dankoy.hw19.core.dto.commentary.CommentaryCreateDTO;
-import ru.dankoy.hw19.core.dto.commentary.CommentaryDTO;
+import ru.dankoy.hw19.core.dto.commentary.CommentaryCreateUpdateDTO;
+import ru.dankoy.hw19.core.dto.commentary.CommentaryFullDTO;
 import ru.dankoy.hw19.core.dto.work.WorkCommentaryDTO;
 import ru.dankoy.hw19.core.exceptions.Entity;
 import ru.dankoy.hw19.core.exceptions.EntityNotFoundException;
@@ -29,53 +28,52 @@ public class CommentaryRestController {
 
 
   @GetMapping("/api/v1/work/{id}/commentary")
-  public List<CommentaryDTO> getAllByBookId(@PathVariable String id) {
+  public List<CommentaryFullDTO> getAllByBookId(@PathVariable String id) {
     var commentaries = commentaryService.getAllByBookId(id);
-    return commentaries.stream().map(CommentaryDTO::toDTO).collect(Collectors.toList());
+    return commentaries.stream().map(CommentaryFullDTO::toDTO).toList();
   }
 
 
   @PostMapping("/api/v1/work/{workId}/commentary")
-  public CommentaryDTO createCommentaryToWork(@PathVariable String workId,
-      @RequestBody CommentaryCreateDTO dto) {
+  public CommentaryFullDTO createCommentaryToWork(@PathVariable String workId,
+      @RequestBody CommentaryCreateUpdateDTO dto) {
 
     var work = new WorkCommentaryDTO(workId);
     dto.setWork(work);
-    var fromDto = CommentaryCreateDTO.toCommentary(dto);
+    var fromDto = CommentaryCreateUpdateDTO.fromCreateDTO(dto);
 
     var created = commentaryService.insert(fromDto);
 
-    return CommentaryDTO.toDTO(created);
+    return CommentaryFullDTO.toDTO(created);
 
   }
 
 
   @GetMapping("/api/v1/commentary/{id}")
-  public CommentaryDTO getById(@PathVariable String id) {
+  public CommentaryFullDTO getById(@PathVariable String id) {
 
     var commentary = commentaryService.getById(id)
         .orElseThrow(() -> new EntityNotFoundException(id, Entity.COMMENTARY));
 
-    return CommentaryDTO.toDTO(commentary);
+    return CommentaryFullDTO.toDTO(commentary);
 
   }
 
 
   @PutMapping("/api/v1/commentary/{id}")
-  public CommentaryDTO update(@PathVariable String id,
-      @RequestBody CommentaryCreateDTO dto) {
+  public CommentaryFullDTO update(@PathVariable String id,
+      @RequestBody CommentaryCreateUpdateDTO dto) {
 
     // Не позволяем менять работу комментария.
     var found = commentaryService.getById(id)
         .orElseThrow(() -> new EntityNotFoundException(id, Entity.COMMENTARY));
-
     dto.setWork(new WorkCommentaryDTO(found.getWork().getId()));
 
-    var toUpdate = CommentaryCreateDTO.toCommentary(dto);
+    var toUpdate = CommentaryCreateUpdateDTO.fromUpdateDTO(dto);
 
     var updated = commentaryService.update(toUpdate);
 
-    return CommentaryDTO.toDTO(updated);
+    return CommentaryFullDTO.toDTO(updated);
 
   }
 
