@@ -2,7 +2,6 @@ package ru.dankoy.hw19.core.controller;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -13,7 +12,10 @@ import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-import ru.dankoy.hw19.core.dto.note.NoteDTO;
+import ru.dankoy.hw19.core.dto.note.NoteCreateDTO;
+import ru.dankoy.hw19.core.dto.note.NoteCreatedDTO;
+import ru.dankoy.hw19.core.dto.note.NoteFullDTO;
+import ru.dankoy.hw19.core.dto.note.NoteUpdateDTO;
 import ru.dankoy.hw19.core.exceptions.Entity;
 import ru.dankoy.hw19.core.exceptions.EntityNotFoundException;
 import ru.dankoy.hw19.core.service.note.NoteService;
@@ -26,21 +28,21 @@ public class NoteRestController {
 
 
   @GetMapping("/api/v1/note")
-  public List<NoteDTO> getAll() {
+  public List<NoteFullDTO> getAll() {
 
     var found = noteService.findAll();
 
-    return found.stream().map(NoteDTO::toDTO).collect(Collectors.toList());
+    return found.stream().map(NoteFullDTO::toDTO).toList();
 
   }
 
   @GetMapping("/api/v1/note/{id}")
-  public NoteDTO getById(@PathVariable String id) {
+  public NoteFullDTO getById(@PathVariable String id) {
 
     var found = noteService.findById(id)
         .orElseThrow(() -> new EntityNotFoundException(id, Entity.NOTE));
 
-    return NoteDTO.toDTO(found);
+    return NoteFullDTO.toDTO(found);
 
   }
 
@@ -54,39 +56,39 @@ public class NoteRestController {
   }
 
   @PostMapping("/api/v1/note")
-  public NoteDTO create(@RequestBody NoteDTO dto) {
+  public NoteCreatedDTO create(@RequestBody NoteCreateDTO dto) {
 
-    var toCreate = NoteDTO.fromDTO(dto);
+    var toCreate = NoteCreateDTO.fromDTO(dto);
     var created = noteService.create(toCreate);
 
-    return NoteDTO.toDTO(created);
+    return NoteCreatedDTO.toDTO(created);
 
   }
 
   @PutMapping("/api/v1/note/{id}")
-  public NoteDTO update(@PathVariable String id, @RequestBody NoteDTO dto) {
+  public NoteCreatedDTO update(@PathVariable String id, @RequestBody NoteUpdateDTO dto) {
 
     // Проверка на существование полки по id и проверка принадлежности юзеру
     noteService.findById(id)
         .orElseThrow(() -> new EntityNotFoundException(id, Entity.NOTE));
 
-    var toUpdate = NoteDTO.fromDTO(dto);
+    var toUpdate = NoteUpdateDTO.fromDTO(dto);
     var updated = noteService.update(toUpdate);
 
-    return NoteDTO.toDTO(updated);
+    return NoteCreatedDTO.toDTO(updated);
 
   }
 
 
   // Нужно ли оно вообще?
-  @GetMapping(value = "/api/v1/edition/{editionId}/note", produces= {"application/json"})
-  public NoteDTO getByEdition(@PathVariable String editionId) {
+  @GetMapping(value = "/api/v1/edition/{editionId}/note", produces = {"application/json"})
+  public NoteFullDTO getByEdition(@PathVariable String editionId) {
 
     var note = noteService.findByEditionId(editionId);
 
     // Если объект не найден, то возвращает пустой json
-    return note.map(NoteDTO::toDTO)
-        .orElseGet(NoteDTO::new);
+    return note.map(NoteFullDTO::toDTO)
+        .orElseGet(NoteFullDTO::new);
 
   }
 
